...
          }
        }
      },
      floatingActionButton = {
        FloatingActionButton(
            onClick = { navigationActions.navigateTo(Screen.ADD_ACTIVITY) },
            modifier = Modifier.testTag("addActivityButton")) {
              Icon(imageVector = Icons.Default.Add, contentDescription = null)
            }
      }) { pd ->
        LazyColumn(
            verticalArrangement = Arrangement.spacedBy(8.dp),
            contentPadding = PaddingValues(vertical = 8.dp),
...
                    .padding(pd)
                    .testTag("activityColumn")) {
              if (listOfActivities.value.isEmpty()) {
                item {
                  Text(
                      text = "No activities planned for this trip",
                      modifier = Modifier.testTag("emptyTravel"))
                }
              } else {
                items(listOfActivities.value.size) { idx ->
                  ActivityItem(
                      listOfActivities.value[idx],
                      onClick = {
...
